<resources>
    <string name="app_name">My Score</string>
    <string name="proceed">Продолжить</string>
    <string name="back">Назад</string>
    <string name="skip">Пропустить</string>
    <string name="start">Завершить</string>
    <string name="first_title">Узнай\nВсе о спорте вместе с нами.</string>
    <string name="second_title">Наше приложение предоставляет\nвам самые свежие результаты\nваших любимых команд</string>
    <string name="third_title">В этом приложении собраны\nвсе команды мира и в том\nчисле игроки всего мира</string>
    <string name="my_games">Мои игры</string>
    <string name="all_games">Все игры</string>
    <string name="my_commands">Мои команды</string>
    <string name="tournaments">Турниры</string>
    <string name="DateFormat">2020–09–09</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="football">Футбол</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="options">Вид спорта</string>
    <string name="my_score">My Score</string>
    <string name="favourite_turnir">Избранные Континенты</string>
    <string name="others">Прочие Континенты [А-Я]</string>
    <string name="xokei">Хоккей</string>
    <string name="basketball">Баскетбол</string>
    <string name="tennis">Теннис</string>
    <string name="liga_isCountry">Лиги этой Страны:</string>
    <string name="command_to_leagues">Команды этой лиги</string>
    <string name="all_country">Страны</string>
    <string name="games_season">Игры по сезонам</string>
    <string name="barcelona">Barcelona</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="start_match">2020-09-18 18:30:00</string>
    <string name="vs">VS</string>
    <string name="city">Города</string>
    <string name="leagues">Лиги</string>
    <string name="commands_leagues">Команды этой лиги</string>
    <string name="statistics">Статистика</string>
    <string name="minus">-</string>
    <string name="stadion">Venue</string>
    <string name="capacity">Capacity</string>
    <string name="match_information">MATCH INFORMATION</string>
    <string name="allianz_arena">Allianz Arena</string>
    <string name="capasite">75000</string>
    <string name="city_name">Munich</string>
    <string name="city_n">City</string>
    <string name="shooting">Shooting</string>
    <string name="attacks">Attacks</string>
    <string name="possesion">Possesion</string>
    <string name="corners">Corners</string>
    <string name="fouls">Fouls</string>
    <string name="offsides">Offsides</string>
    <string name="cards">Cards</string>
    <string name="firsname">FirsName</string>
    <string name="lastName">lastName</string>
    <string name="players_commands">Игроки этой команды</string>
    <string name="season">Сезон</string>
    <string name="continent">Континенты</string>
    <string name="player">Player</string>
    <string name="reshotka">#</string>
    <string name="overall">Overall</string>
    <string name="away">Away</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bookmaker">Букмекеры</string>
    <string name="write_continent">Введите континент</string>
    <string name="global_search">Глобальный Поиск</string>
    <string name="empty_search">По вашему запросу ничего не найдено,попробуйте еще раз</string>
</resources>