<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181829">

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/source_sans_pro_semi_bold_italic"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <kg.nurik.finalproject.view.NonSwipeableViewPager
        android:id="@+id/onBoardViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/onBoardTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp14"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/bg_tablayout_selector"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@android:color/transparent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/source_sans_pro_semi_bold_italic"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="@id/onBoardTabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/onBoardTabLayout" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/source_sans_pro_semi_bold_italic"
        android:gravity="center"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="@id/onBoardTabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/onBoardTabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>