<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#181829"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_logo_teams"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_away_container"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/ic_item_away_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_home_container"
            android:layout_width="@dimen/dp55"
            android:layout_height="@dimen/dp55"

            android:src="@drawable/ic_item_home_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_home"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp35"
            android:src="@drawable/ic_item_away_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/logo_home_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_away"
            android:layout_width="@dimen/dp35"
            android:layout_height="@dimen/dp35"
            android:src="@drawable/ic_item_away_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/logo_away_container"
            app:layout_constraintStart_toStartOf="@id/logo_away_container"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@id/container_logo_teams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_logo_teams"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_home_team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/source_sans_pro_semi_bold_italic"
            android:gravity="left"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_vs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/barcelona" />

        <TextView
            android:id="@+id/tv_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/source_sans_pro_semi_bold_italic"
            android:text="@string/vs"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_away_team_name"
            app:layout_constraintStart_toEndOf="@id/tv_home_team_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_away_team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/source_sans_pro_semi_bold_italic"
            android:gravity="left"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_vs"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/real_madrid" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/source_sans_pro_semi_bold_italic"
            android:textColor="#65656B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/start_match" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>