<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_parent"
    tools:context=".ui.bottomNav.allGames.AllGamesFragment">

    <ProgressBar
        android:id="@+id/progressBar_all_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTintMode="src_in"
        android:theme="@style/CircularProgress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentToolbarAllCountry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_black_toolbar"
            android:gravity="center"
            android:text="@string/continent"
            android:textColor="@color/white"
            android:textSize="@dimen/sp24"
            app:layout_constraintBottom_toBottomOf="@id/parentToolbarAllCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/parentToolbarAllCountry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_favourite_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentToolbarAllCountry">

        <TextView
            android:id="@+id/tv_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCEADA85"
            android:fontFamily="@font/source_sans_pro_bold"
            android:padding="1dp"
            android:paddingStart="11dp"
            android:text="@string/favourite_turnir"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recyclerview_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favourite"
            tools:itemCount="5"
            tools:listitem="@layout/item_all_games_main_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_other"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_favourite_games">

        <TextView
            android:id="@+id/tv_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCEADA85"
            android:fontFamily="@font/source_sans_pro_bold"
            android:padding="1dp"
            android:paddingStart="11dp"
            android:text="@string/others"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recyclerview_others"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_others"
            tools:listitem="@layout/item_all_games_main_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>